# practice-rust

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: cicd.yaml
migration/src/: lib.rs  m20220101_000001_create_product_and_item.rs
src/: main.rs
src/entities/: item.rs  mod.rs  prelude.rs  product.rs
src/handler/: item_handler.rs  mod.rs  product_handler.rs
src/models/: item_model.rs  mod.rs  product_model.rs
src/repositories/: item_repository.rs  mod.rs  product_repository.rs
src/routes/: item_routes.rs  mod.rs  product_routes.rs
src/services/: item_service.rs  mod.rs  product_service.rs
src/utils/: constants.rs  db.rs  mod.rs
