[package]
name = "practice-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "0.11.3", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1.42.0", features = ["full"] }
axum = "0.7.9"
serde = "1.0.215"
serde_json = "1.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
tower-http = {version="0.6.2",features=["cors"]}
dotenv = "0.15.0"
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = "0.3.28"
